--- a/app/components/settings.html
+++ b/app/components/settings.html
@@ -26,7 +26,7 @@
                 </div>
                 <ul class="nav nav-second-level" style="margin-left: -15px;">
                     <li ng-if="nav.user.communities.indexOf(nav.user.profile.home) > -1">
-                        <a ng-click="nav.editCommunity({'type':'network'});" style="color: #aaa;">+&nbsp;&nbsp;Add Network</a>
+                        <button class="btn btn-info" ng-click="nav.editCommunity({'type':'network'});" style="margin: 10px 15px;">+&nbsp;&nbsp;Add Network</button>
                     </li>
                 </ul>
             </div>
@@ -47,7 +47,7 @@
                 </div>
                 <ul class="nav nav-second-level" style="margin-left: -15px;">
                     <li ng-if="nav.user.communities.indexOf(nav.user.profile.home) > -1">
-                        <a ng-click="nav.editCommunity({type:'cluster'});" style="color: #aaa;">+&nbsp;&nbsp;Add Industry</a>
+                        <button class="btn btn-primary" ng-click="nav.editCommunity({type:'cluster'});" style="margin: 10px 15px;">+&nbsp;&nbsp;Add Industry</button>
                     </li>
                 </ul>
             </div>
