Support multiply types of networks. This closes #4

--- a/app/components/nav/nav.edit_network.html
+++ b/app/components/nav/nav.edit_network.html
@@ -7,11 +7,21 @@
     <div class="modal-body">
         <form name="edit.form">
             <div class="hpanel">
-                <div class="panel-heading" style="font-size: 20px;">1. Select the type of network to create</div>
-                <select class="form-control m-b" ng-model="edit.communityForm.parent" style="margin-bottom: 5px;" required>
+                <div class="panel-heading" style="font-size: 20px;">1. Select the types of network to create</div>
+
+                <!-- <dropdown-multiselect list="edit.parents" ng-model="edit.communityForm.parent"></dropdown-multiselect> -->
+                <ui-select multiple="multiple" ng-model="edit.communityForm.parent" ng-disabled="disabled" theme="bootstrap" style="margin-bottom: 5px">
+                    <ui-select-match placeholder="Select networks types...">{{$item.label}}</ui-select-match>
+                    <ui-select-choices repeat="p.id as p in edit.parentTypes | filter: $select.search">
+                        <div ng-bind-html="p.label | highlight: $select.search"></div>
+                    </ui-select-choices>
+                </ui-select>
+
+                <!-- <select class="form-control m-b" ng-model="edit.communityForm.parent" style="margin-bottom: 5px;" required>
                     <option ng-repeat="parent in edit.parents">{{ parent }}</option>
-                </select>
-                <em><a href="mailto:james@startupcommunity.org?subject='I have a different type of network'" target="_blank">Type not listed?</a></em>
+                </select> -->
+                <div><em><a href="mailto:james@startupcommunity.org?subject='I have a different type of network'" target="_blank">Type not listed?</a></em></div>
+
                 <div class="m-t-xs" ng-show="!edit.communityForm.parent && edit.submitted">
                     <span class="text-danger">&nbsp;&nbsp;<i class="fa fa-exclamation-triangle"></i> A type is required.</span>
                 </div>
