--- a/app/less/dropdown.less
+++ b/app/less/dropdown.less
@@ -49,7 +49,7 @@
 }
 .ui-select-multiple.ui-select-bootstrap input.ui-select-search {
   margin: 0;
-  height: 26px;
+  //height: 26px;
 }
 .ui-select-multiple.ui-select-bootstrap .ui-select-match-item {
   margin: 5px 3px 5px 0;
