--- a/app/components/nav/nav.edit_cluster.html
+++ b/app/components/nav/nav.edit_cluster.html
@@ -8,7 +8,7 @@
     <div class="modal-body">
         <form name="edit.form">
             <div class="hpanel">
-                <div class="panel-heading" style="font-size: 20px;">1. Select a parent for this industry</div>
+                <div class="panel-heading" style="font-size: 20px;">1. Select the primary industry this will be a part of</div>
                 <select class="form-control m-b" ng-model="edit.communityForm.parent" style="margin-bottom: 5px;" required>
                     <option ng-repeat="parent in edit.parents">{{ parent }}</option>
                 </select>
