--- a/app/components/newsletter/newsletter.html
+++ b/app/components/newsletter/newsletter.html
@@ -1,1 +1,2 @@
+<a ng-click="news.test()">csv test</a>
 <iframe srcdoc="{{news.frame_content}}" name="newsletter_frame" id="framed_newsletter" style="border: none; margin-top: 30px; height: 1500px; width: 100%;"></iframe>
