--- a/app/components/welcome/welcome.roles.html
+++ b/app/components/welcome/welcome.roles.html
@@ -5,31 +5,12 @@
     <div class="panel-body no-padding">
         <div class="list-group ">
 
-            <a class="list-group-item" ng-class="{'active' : welcome.roles.founder}" ng-click="welcome.roles.founder = !welcome.roles.founder">
-                <div class="stats-icon pull-right" ng-show="welcome.roles.founder"><i class="pe-7s-check fa-2x" ></i></div>
-                <h5 class="list-group-item-heading">Founder</h5>
-                <p class="list-group-item-text">You have started or co-founded a business venture.</p>
+            <a class="list-group-item" ng-repeat="r in welcome.selectRoles" ng-if="$index >= 1" ng-class="{'active' : welcome.roles[r.value]}" ng-click="welcome.roles[r.value] = !welcome.roles[r.value]">
+                <div class="stats-icon pull-right" ng-show="welcome.roles[r.value]"><i class="pe-7s-check fa-2x" ></i></div>
+                <h5 class="list-group-item-heading">{{ r.text }}</h5>
+                <p class="list-group-item-text">{{ r.description }}</p>
             </a>
-            <a class="list-group-item" ng-class="{'active' : welcome.roles.investor}" ng-click="welcome.roles.investor = !welcome.roles.investor">
-                <div class="stats-icon pull-right" ng-show="welcome.roles.investor"><i class="pe-7s-check fa-2x"></i></div>
-                <h5 class="list-group-item-heading">Investor</h5>
-                <p class="list-group-item-text">You are an active investor in startup companies.</p>
-            </a>
-            <a class="list-group-item" ng-class="{'active' : welcome.roles.team}" ng-click="welcome.roles.team = !welcome.roles.team">
-                <div class="stats-icon pull-right" ng-show="welcome.roles.team"><i class="pe-7s-check fa-2x"></i></div>
-                <h5 class="list-group-item-heading">Team Member</h5>
-                <p class="list-group-item-text">You are a current employee or team member of a local company.</p>
-            </a>
-            <a class="list-group-item" ng-class="{'active' : welcome.roles.mentor}" ng-click="welcome.roles.mentor = !welcome.roles.mentor">
-                <div class="stats-icon pull-right" ng-show="welcome.roles.mentor"><i class="pe-7s-check fa-2x"></i></div>
-                <h5 class="list-group-item-heading">Mentor</h5>
-                <p class="list-group-item-text">You are willing to provide guidance to entrepreneurs without compensation - the 'give before you get' philosophy.</p>
-            </a>
-            <a class="list-group-item" ng-class="{'active' : welcome.roles.provider}" ng-click="welcome.roles.provider = !welcome.roles.provider">
-                <div class="stats-icon pull-right" ng-show="welcome.roles.provider"><i class="pe-7s-check fa-2x"></i></div>
-                <h5 class="list-group-item-heading">Service Provider</h5>
-                <p class="list-group-item-text">You provide services to community members for a fee.</p>
-            </a>
+
         </div>
     </div>
     <br>
