--- a/app/components/settings.html
+++ b/app/components/settings.html
@@ -35,7 +35,7 @@
 
             <a ng-if="nav.user.communities.indexOf(nav.user.profile.home) > -1 && nav.user.newsletter" class="btn btn-info pull-right" ui-sref="newsletter" style="margin-top:15px; width: 100%;">Create / Edit Email Newsletters</a>
 
-            <button ng-if="nav.user.communities.indexOf(nav.user.profile.home) > -1 && nav.user.newsletter" class="btn btn-warning pull-right" ng-click="nav.syncNewsletter()" style="margin-top:15px; width: 100%;" title="This will synchronize the members of your networks with your newsletter lists.">Update Newsletter Lists from Networks</button>
+            <button ng-if="nav.user.communities.indexOf(nav.user.profile.home) > -1 && nav.user.newsletter" ladda="nav.syncworking" class="ladda-button btn btn-warning pull-right" data-style="zoom-in" data-spinner-size="25" ng-click="nav.syncNewsletter()" style="margin-top:15px; width: 100%;" title="This will synchronize the members of your networks with your newsletter lists. This is only needed if names are missing from your lists.">Update Newsletter Lists from Networks</button>
 
         </div>
 
