--- a/app/less/various.less
+++ b/app/less/various.less
@@ -1,5 +1,10 @@
 /* Custom */
 
+.navbar-nav>li>a, .navbar-nav>div>a {
+  padding-top: 13px !important;
+  font-size: 25px;
+}
+
 .small-column-title {
   float:right;
   white-space:nowrap;
