--- a/app/components/dashboard/dashboard.html
+++ b/app/components/dashboard/dashboard.html
@@ -68,16 +68,17 @@
                 <div class="hpanel" style="border-top: 2px solid #34495E;">
                     <div class="panel-body" style="padding: 10px 5px;">
                         <div class="col-xs-8">
-                            <div class="stats-title">
+                            <div class="stats-title pull-left">
                                 <a ui-sref="{{'company.list' + nav.nav_url}}">
                                     <h3>Companies</h3>
-                                    <h1 style="color:#34495E;">{{dashboard.top.companies.count}}</h1>
                                 </a>
                             </div>
                         </div>
                         <div class="col-xs-4">
                             <div class="stats-icon pull-right">
-                                <i class="pe-7s-power fa-4x"></i>
+                                <a ui-sref="{{'company.list' + nav.nav_url}}">
+                                    <h3 style="color:#34495E;">{{dashboard.top.companies.count}}</h3>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -99,13 +100,14 @@
                             <div class="stats-title pull-left">
                                 <a ui-sref="{{'user.list' + nav.nav_url}}">
                                     <h3>People</h3>
-                                    <h1 class="text-info">{{dashboard.top.people.count}}</h1>
                                 </a>
                             </div>
                         </div>
                         <div class="col-xs-4">
                             <div class="stats-icon pull-right">
-                                <i class="pe-7s-id fa-4x"></i>
+                                <a ui-sref="{{'user.list' + nav.nav_url}}">
+                                    <h3 class="text-info">{{dashboard.top.people.count}}</h3>
+                                </a>
                             </div>
                         </div>
                     </div>
