css fix for search

--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -15,7 +15,7 @@
             <minimaliza-menu ng-if="!nav.embedded"></minimaliza-menu>
             <div class="navbar-left">
                 <div class="nav navbar-nav no-borders" style="white-space: nowrap;">
-                    <li style="float: left;">
+                    <li style="float: left; padding-top: 7px;">
                         <a ng-click="$('#searchform').submit()">
                             <i class="pe-7s-search"></i>
                         </a>
