--- a/app/less/forum.less
+++ b/app/less/forum.less
@@ -44,8 +44,8 @@
 
     .number {
       display: block;
-      font-weight: 600;
-      font-size: 22px;
+      font-weight: 500;
+      font-size: 20px;
       //margin-top: 5px;
     }
 
@@ -56,8 +56,8 @@
 
   .number-column {
     float:right;
-    margin-right:5px;
-    margin-top:10px;
+    margin-right:0;
+    margin-top:20px;
   }
 
   .panel-body .media-image {
