updated loaders on nav

--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -133,8 +133,8 @@
                         <a ui-sref="community.dashboard({location_path: nav.location.key, community_path: '', community: nav.location, location: nav.location, query: '*', top: nav.top, communities: nav.communities, user: nav.user })" style="padding-left: 15px; font-size: 16px; font-weight: bold; border-bottom: 1px solid #eee; background-color:#F6F8F9; border-left: 2px solid #82BC4B;" ng-click="l_working = true">
                             <span ng-if="nav.location" style="white-space:nowrap;font-size:18px;">
                                 <span class="fa fa-angle-down" style="font-size: 18px; margin: 0 -2px 0 -4px;"></span>
+                                <span loading-bars ng-show="l_working" style="padding-right: 32px;"></span>
                                 &nbsp;{{nav.location.profile.name.split(',').slice(0, (nav.location.profile.name.split(',').length - 1) || 1).join()}}
-                                <span loading-bars ng-show="l_working"></span>
                             </span>
                         </a>
                     </li>
@@ -153,8 +153,9 @@
                         <a>No locations yet</a>
                     </li>
                     <li ng-repeat="item in nav.locations">
-                        <a ui-sref="community.dashboard({location_path: item.key, community_path: '', community: item, location: item, query: '*', top: nav.top, communities: nav.communities, user: nav.user})" ng-class="{active: nav.path.includes('/' + item.key)}" ng-click="li_working = true"><i class="fa fa-globe"></i> {{item.profile.name}}
-                        <span loading-bars ng-show="li_working"></span>
+                        <a ui-sref="community.dashboard({location_path: item.key, community_path: '', community: item, location: item, query: '*', top: nav.top, communities: nav.communities, user: nav.user})" ng-class="{active: nav.path.includes('/' + item.key)}" ng-click="li_working = true"><i class="fa fa-globe"></i>
+                            <span loading-bars ng-show="li_working" style="padding-right: 35px; margin-left: -15px;"></span>
+                            {{item.profile.name}}
                         </a>
                     </li>
                 </ul>
@@ -170,8 +171,9 @@
                 <ul class="nav nav-second-level">
                     <li ng-repeat="item in nav.networks">
                         <a ui-sref="{{'community.dashboard' + nav.nav_jump}}" ng-class="{active: nav.path.includes('/' + item.key)}" ng-click="nc_working = true">
-                            <i ng-class="'fa ' + item.profile.icon"></i> {{item.community_profiles[nav.location.key].name}}
-                            <span loading-bars ng-show="nc_working"></span>
+                            <i ng-class="'fa ' + item.profile.icon"></i>
+                            <span loading-bars ng-show="nc_working" style="padding-right: 35px; margin-left: -15px;"></span>
+                            {{item.community_profiles[nav.location.key].name}}
                         </a>
                     </li>
                 </ul>
@@ -188,12 +190,13 @@
                     <li ng-repeat="item in nav.top.parents | orderBy: 'item.value' : reverse">
                         <a ui-sref="community.dashboard({community_path: item.label, community: nav.nav_communities[item.label], query: '*', location_path: (nav.location.key || nav.user.profile.home), top: nav.top, communities: nav.communities, user: nav.user})" ng-class="{active: nav.path.includes('/' + item.label)}" ng-click="cl_working = true">
                             <span>
-                                <i ng-class="'fa ' + nav.industry_icons[item.label].icon"></i> {{item.label[0].toUpperCase() + item.label.slice(1)}}
-                                <span loading-bars ng-show="cl_working"></span>
-
+                                <i ng-class="'fa ' + nav.industry_icons[item.label].icon"></i>
+                                <span loading-bars ng-show="cl_working" style="padding-right: 35px; margin-left: -12px;"></span>
+                                {{item.label[0].toUpperCase() + item.label.slice(1)}}
                                 <a ng-repeat="c in nav.clusters[item.label]" ui-sref="community.dashboard({community_path: c.key, community: nav.nav_communities[c.key], query: '*', location_path: (nav.location.key || nav.user.profile.home), top: nav.top, communities: nav.communities, user: nav.user })" ng-class="{active: nav.path.includes('/' + c.key)}" ng-click="clc_working = true" style="padding-left:40px;">
-                                    <i ng-class="'fa ' + nav.industry_icons[item.label].icon"></i> {{c.community_profiles[nav.location.key].name[0].toUpperCase() + c.community_profiles[nav.location.key].name.slice(1);}}
-                                    <span loading-bars ng-show="clc_working"></span>
+                                    <i ng-class="'fa ' + nav.industry_icons[item.label].icon"></i>
+                                    <span loading-bars ng-show="clc_working" style="padding-right: 35px; margin-left: -12px;"></span>
+                                    {{c.community_profiles[nav.location.key].name[0].toUpperCase() + c.community_profiles[nav.location.key].name.slice(1);}}
                                 </a>
                             </span>
 
