--- a/app/components/nav/nav.html
+++ b/app/components/nav/nav.html
@@ -90,13 +90,13 @@
                         </div>
                     </li>
                     <li ng-if="nav.user" id="knowtify" class="dropdown">
-                        <a tooltip-placement="bottom" uib-tooltip="Alerts">
+                        <a>
                             <i class="pe-7s-bell"></i>
                             <p style="font-size: 10px; margin-top: -4px; margin-left: -3px;">Alerts</p>
                         </a>
                     </li>
                     <li ng-if="nav.user" class="dropdown">
-                        <a ng-click="nav.openChat()" tooltip-placement="bottom" uib-tooltip="Help">
+                        <a ng-click="nav.openChat()">
                             <i class="pe-7s-help1"></i>
                             <p style="font-size: 10px; margin-top: -4px; margin-left: 1px;">Help</p>
                         </a>
@@ -105,13 +105,13 @@
                         </a>
                     </li>
                     <li ng-if="nav.user" class="dropdown">
-                        <a ui-sref="settings({ user: nav.user })" tooltip-placement="bottom" uib-tooltip="Settings">
+                        <a ui-sref="settings({ user: nav.user })">
                             <i class="pe-7s-config"></i>
                             <p style="font-size: 10px; margin-top: -4px; margin-left: -7px;">Settings</p>
                         </a>
                     </li>
                     <li ng-if="nav.user" class="dropdown">
-                        <a tooltip-placement="bottom" uib-tooltip="Logout" href="/logout" style="padding-right: 30px;">
+                        <a href="/logout" style="padding-right: 30px;">
                             <i class="pe-7s-upload pe-rotate-90"></i>
                             <p style="font-size: 10px; margin-top: -4px; margin-left: -11px;">Log Out</p>
                         </a>
