--- a/app/components/header/header_small.html
+++ b/app/components/header/header_small.html
@@ -12,8 +12,8 @@
                     <li ui-sref="{{'company.list' + nav.nav_url}}" ng-class="{ 'active' : nav.state.current.name == 'company.list' }">
                         <a>COMPANIES</a>
                     </li>
-                    <li ui-sref="{{'networks.list' + nav.nav_url}}" ng-class="{ 'active' : nav.state.current.name == 'networks.list' }" ng-if="nav.community.type !== 'network'">
-                        <a>NETWORKS</a>
+                    <li ui-sref="{{'resources.list' + nav.nav_url}}" ng-class="{ 'active' : nav.state.current.name == 'resources.list' }" ng-if="nav.community.type !== 'network'">
+                        <a>RESOURCES</a>
                     </li>
                 </ul>
 
@@ -28,8 +28,7 @@
                 </ul>
             </div>
 
-
-            <div class="pull-right">
+            <div class="pull-right" ng-if="(nav.state.current.name !== 'resource.list')">
                 <div ng-if="!nav.user && (nav.state.current.name == 'company.list')" style="padding-top: 6px; margin-right: 8px; float: right;">
                     <button class="btn btn-sm btn-success" ng-click="nav.requestInvitation()" style="font-size: 12px; color: #fff;">Add Company</button>
                 </div>
@@ -40,6 +39,9 @@
                 <div ng-if="nav.user && (nav.community.type == 'cluster' || (nav.community.type == 'network' && nav.user.roles.leader[nav.community.key]) || (nav.community.type == 'location' && nav.user.communities.indexOf(nav.location.key) > -1))" style="padding-top: 6px; margin-right: 8px; float: right;">
                     <button class="btn btn-sm btn-info" ng-click="nav.invitePeople()" style="font-size: 12px; color: #fff;">Invite People</button>
                 </div>
+            </div>
+            <div class="pull-right" ng-if="nav.user && (nav.state.current.name == 'resource.list')">
+                <button class="btn btn-sm btn-info" ng-click="nav.addResource()" style="font-size: 12px; color: #fff;">Add Resource</button>
             </div>
         </div>
     </div>
